# pySDFGen

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MANIFEST  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: actionlint.yml  release.yml  test.yml
pysdfgen/: __init__.py
tests/pysdfgen_tests/: test_sdfgen.py
